target/generated-sources/antlr4/predmoodul/PredParser.java
// Generated from com/example/Pred.g4 by ANTLR 4.3
package predmoodul;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PredParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__16=1, T__15=2, T__14=3, T__13=4, T__12=5, T__11=6, T__10=7, T__9=8, 
		T__8=9, T__7=10, T__6=11, T__5=12, T__4=13, T__3=14, T__2=15, T__1=16, 
		T__0=17, ARV=18, TAHT=19, WS=20;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'0'", "'1'", "'->'", "'v'", "'='", "'~'", "':='", 
		"'A'", "'E'", "'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "ARV", 
		"TAHT", "WS"
	};
	public static final int
		RULE_koguvalem = 0, RULE_abidef = 1, RULE_predtahis = 2, RULE_predsymbol = 3, 
		RULE_identifikaator = 4, RULE_defargumendid = 5, RULE_indiviidmuutuja = 6, 
		RULE_predvalem = 7, RULE_ekvvalem = 8, RULE_implvalem = 9, RULE_disjvalem = 10, 
		RULE_konjvalem = 11, RULE_iga = 12, RULE_eks = 13, RULE_korgvalem = 14, 
		RULE_atomaarnevalem = 15, RULE_termargumendid = 16, RULE_term = 17, RULE_pmterm = 18, 
		RULE_kjterm = 19;
	public static final String[] ruleNames = {
		"koguvalem", "abidef", "predtahis", "predsymbol", "identifikaator", "defargumendid", 
		"indiviidmuutuja", "predvalem", "ekvvalem", "implvalem", "disjvalem", 
		"konjvalem", "iga", "eks", "korgvalem", "atomaarnevalem", "termargumendid", 
		"term", "pmterm", "kjterm"
	};

	@Override
	public String getGrammarFileName() { return "Pred.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PredParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class KoguvalemContext extends ParserRuleContext {
		public AbidefContext abidef(int i) {
			return getRuleContext(AbidefContext.class,i);
		}
		public List<AbidefContext> abidef() {
			return getRuleContexts(AbidefContext.class);
		}
		public PredvalemContext predvalem() {
			return getRuleContext(PredvalemContext.class,0);
		}
		public KoguvalemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_koguvalem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterKoguvalem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitKoguvalem(this);
		}
	}

	public final KoguvalemContext koguvalem() throws RecognitionException {
		KoguvalemContext _localctx = new KoguvalemContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_koguvalem);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(40); abidef();
					}
					} 
				}
				setState(45);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(46); predvalem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbidefContext extends ParserRuleContext {
		public PredtahisContext predtahis() {
			return getRuleContext(PredtahisContext.class,0);
		}
		public PredvalemContext predvalem() {
			return getRuleContext(PredvalemContext.class,0);
		}
		public AbidefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abidef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterAbidef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitAbidef(this);
		}
	}

	public final AbidefContext abidef() throws RecognitionException {
		AbidefContext _localctx = new AbidefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_abidef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); predtahis();
			setState(49); match(T__9);
			setState(50); predvalem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredtahisContext extends ParserRuleContext {
		public PredsymbolContext predsymbol() {
			return getRuleContext(PredsymbolContext.class,0);
		}
		public List<DefargumendidContext> defargumendid() {
			return getRuleContexts(DefargumendidContext.class);
		}
		public DefargumendidContext defargumendid(int i) {
			return getRuleContext(DefargumendidContext.class,i);
		}
		public PredtahisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predtahis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterPredtahis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitPredtahis(this);
		}
	}

	public final PredtahisContext predtahis() throws RecognitionException {
		PredtahisContext _localctx = new PredtahisContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_predtahis);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52); predsymbol();
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(53); defargumendid();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredsymbolContext extends ParserRuleContext {
		public IdentifikaatorContext identifikaator() {
			return getRuleContext(IdentifikaatorContext.class,0);
		}
		public PredsymbolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predsymbol; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterPredsymbol(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitPredsymbol(this);
		}
	}

	public final PredsymbolContext predsymbol() throws RecognitionException {
		PredsymbolContext _localctx = new PredsymbolContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_predsymbol);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59); identifikaator();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifikaatorContext extends ParserRuleContext {
		public TerminalNode TAHT(int i) {
			return getToken(PredParser.TAHT, i);
		}
		public TerminalNode ARV(int i) {
			return getToken(PredParser.ARV, i);
		}
		public List<TerminalNode> ARV() { return getTokens(PredParser.ARV); }
		public List<TerminalNode> TAHT() { return getTokens(PredParser.TAHT); }
		public IdentifikaatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifikaator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterIdentifikaator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitIdentifikaator(this);
		}
	}

	public final IdentifikaatorContext identifikaator() throws RecognitionException {
		IdentifikaatorContext _localctx = new IdentifikaatorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_identifikaator);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(61); match(TAHT);
			setState(65);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(62);
					_la = _input.LA(1);
					if ( !(_la==ARV || _la==TAHT) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					} 
				}
				setState(67);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefargumendidContext extends ParserRuleContext {
		public IndiviidmuutujaContext indiviidmuutuja(int i) {
			return getRuleContext(IndiviidmuutujaContext.class,i);
		}
		public List<IndiviidmuutujaContext> indiviidmuutuja() {
			return getRuleContexts(IndiviidmuutujaContext.class);
		}
		public DefargumendidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defargumendid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterDefargumendid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitDefargumendid(this);
		}
	}

	public final DefargumendidContext defargumendid() throws RecognitionException {
		DefargumendidContext _localctx = new DefargumendidContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_defargumendid);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68); match(T__5);
			setState(69); indiviidmuutuja();
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(70); match(T__1);
				setState(71); indiviidmuutuja();
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77); match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IndiviidmuutujaContext extends ParserRuleContext {
		public TerminalNode TAHT() { return getToken(PredParser.TAHT, 0); }
		public IndiviidmuutujaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_indiviidmuutuja; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterIndiviidmuutuja(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitIndiviidmuutuja(this);
		}
	}

	public final IndiviidmuutujaContext indiviidmuutuja() throws RecognitionException {
		IndiviidmuutujaContext _localctx = new IndiviidmuutujaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_indiviidmuutuja);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); match(TAHT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredvalemContext extends ParserRuleContext {
		public EkvvalemContext ekvvalem(int i) {
			return getRuleContext(EkvvalemContext.class,i);
		}
		public List<EkvvalemContext> ekvvalem() {
			return getRuleContexts(EkvvalemContext.class);
		}
		public PredvalemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predvalem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterPredvalem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitPredvalem(this);
		}
	}

	public final PredvalemContext predvalem() throws RecognitionException {
		PredvalemContext _localctx = new PredvalemContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_predvalem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); ekvvalem();
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10) {
				{
				{
				setState(82); match(T__10);
				setState(83); ekvvalem();
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EkvvalemContext extends ParserRuleContext {
		public List<ImplvalemContext> implvalem() {
			return getRuleContexts(ImplvalemContext.class);
		}
		public ImplvalemContext implvalem(int i) {
			return getRuleContext(ImplvalemContext.class,i);
		}
		public EkvvalemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ekvvalem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterEkvvalem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitEkvvalem(this);
		}
	}

	public final EkvvalemContext ekvvalem() throws RecognitionException {
		EkvvalemContext _localctx = new EkvvalemContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ekvvalem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89); implvalem();
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13) {
				{
				{
				setState(90); match(T__13);
				setState(91); implvalem();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImplvalemContext extends ParserRuleContext {
		public DisjvalemContext disjvalem(int i) {
			return getRuleContext(DisjvalemContext.class,i);
		}
		public List<DisjvalemContext> disjvalem() {
			return getRuleContexts(DisjvalemContext.class);
		}
		public ImplvalemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_implvalem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterImplvalem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitImplvalem(this);
		}
	}

	public final ImplvalemContext implvalem() throws RecognitionException {
		ImplvalemContext _localctx = new ImplvalemContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_implvalem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); disjvalem();
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__12) {
				{
				{
				setState(98); match(T__12);
				setState(99); disjvalem();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DisjvalemContext extends ParserRuleContext {
		public KonjvalemContext konjvalem(int i) {
			return getRuleContext(KonjvalemContext.class,i);
		}
		public List<KonjvalemContext> konjvalem() {
			return getRuleContexts(KonjvalemContext.class);
		}
		public DisjvalemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_disjvalem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterDisjvalem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitDisjvalem(this);
		}
	}

	public final DisjvalemContext disjvalem() throws RecognitionException {
		DisjvalemContext _localctx = new DisjvalemContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_disjvalem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); konjvalem();
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(106); match(T__6);
				setState(107); konjvalem();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KonjvalemContext extends ParserRuleContext {
		public KorgvalemContext korgvalem() {
			return getRuleContext(KorgvalemContext.class,0);
		}
		public List<IgaContext> iga() {
			return getRuleContexts(IgaContext.class);
		}
		public IgaContext iga(int i) {
			return getRuleContext(IgaContext.class,i);
		}
		public List<EksContext> eks() {
			return getRuleContexts(EksContext.class);
		}
		public EksContext eks(int i) {
			return getRuleContext(EksContext.class,i);
		}
		public KonjvalemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_konjvalem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterKonjvalem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitKonjvalem(this);
		}
	}

	public final KonjvalemContext konjvalem() throws RecognitionException {
		KonjvalemContext _localctx = new KonjvalemContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_konjvalem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__7) | (1L << T__0))) != 0)) {
				{
				setState(116);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(113); match(T__0);
					}
					break;
				case T__8:
					{
					setState(114); iga();
					}
					break;
				case T__7:
					{
					setState(115); eks();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121); korgvalem();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IgaContext extends ParserRuleContext {
		public IndiviidmuutujaContext indiviidmuutuja() {
			return getRuleContext(IndiviidmuutujaContext.class,0);
		}
		public IgaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iga; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterIga(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitIga(this);
		}
	}

	public final IgaContext iga() throws RecognitionException {
		IgaContext _localctx = new IgaContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_iga);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123); match(T__8);
			setState(124); indiviidmuutuja();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EksContext extends ParserRuleContext {
		public IndiviidmuutujaContext indiviidmuutuja() {
			return getRuleContext(IndiviidmuutujaContext.class,0);
		}
		public EksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eks; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterEks(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitEks(this);
		}
	}

	public final EksContext eks() throws RecognitionException {
		EksContext _localctx = new EksContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_eks);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126); match(T__7);
			setState(127); indiviidmuutuja();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KorgvalemContext extends ParserRuleContext {
		public AtomaarnevalemContext atomaarnevalem() {
			return getRuleContext(AtomaarnevalemContext.class,0);
		}
		public PredvalemContext predvalem() {
			return getRuleContext(PredvalemContext.class,0);
		}
		public KorgvalemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_korgvalem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterKorgvalem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitKorgvalem(this);
		}
	}

	public final KorgvalemContext korgvalem() throws RecognitionException {
		KorgvalemContext _localctx = new KorgvalemContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_korgvalem);
		try {
			setState(134);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(129); match(T__5);
				setState(130); predvalem();
				setState(131); match(T__4);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(133); atomaarnevalem();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomaarnevalemContext extends ParserRuleContext {
		public PredsymbolContext predsymbol() {
			return getRuleContext(PredsymbolContext.class,0);
		}
		public TermargumendidContext termargumendid(int i) {
			return getRuleContext(TermargumendidContext.class,i);
		}
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TermargumendidContext> termargumendid() {
			return getRuleContexts(TermargumendidContext.class);
		}
		public AtomaarnevalemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomaarnevalem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterAtomaarnevalem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitAtomaarnevalem(this);
		}
	}

	public final AtomaarnevalemContext atomaarnevalem() throws RecognitionException {
		AtomaarnevalemContext _localctx = new AtomaarnevalemContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_atomaarnevalem);
		try {
			int _alt;
			setState(147);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(136); predsymbol();
				setState(140);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(137); termargumendid();
						}
						} 
					}
					setState(142);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(143); term();
				setState(144); match(T__11);
				setState(145); term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermargumendidContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public TermargumendidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termargumendid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterTermargumendid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitTermargumendid(this);
		}
	}

	public final TermargumendidContext termargumendid() throws RecognitionException {
		TermargumendidContext _localctx = new TermargumendidContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_termargumendid);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149); match(T__5);
			setState(150); term();
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(151); match(T__1);
				setState(152); term();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158); match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public List<PmtermContext> pmterm() {
			return getRuleContexts(PmtermContext.class);
		}
		public PmtermContext pmterm(int i) {
			return getRuleContext(PmtermContext.class,i);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_term);
		int _la;
		try {
			int _alt;
			setState(176);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(160); pmterm();
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(161); match(T__2);
					setState(162); pmterm();
					}
					}
					setState(167);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(168); pmterm();
				setState(173);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(169); match(T__0);
						setState(170); pmterm();
						}
						} 
					}
					setState(175);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PmtermContext extends ParserRuleContext {
		public List<KjtermContext> kjterm() {
			return getRuleContexts(KjtermContext.class);
		}
		public KjtermContext kjterm(int i) {
			return getRuleContext(KjtermContext.class,i);
		}
		public PmtermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pmterm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).enterPmterm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PredListener ) ((PredListener)listener).exitPmterm(this);
		}
	}
